Refactor Dockerfile to work in all environments; Update Spring Boot to the latest version; Enable Java 14 Preview Features;